fixed background image jump on page render using background-attachment: fixed

--- a/src/components/styles/Index.css
+++ b/src/components/styles/Index.css
@@ -6,6 +6,7 @@ body {
   height: 100vh;
   width: 100vw;
   background: url('../../assets/img/backimg.jpg') black;
+  background-attachment: fixed;
   background-size: cover;
   background-position: center;
   overflow: hidden;
